--- a/CSharpEgitimKampi301BusinessLayer/CSharpEgitimKampi301.BusinessLayer.csproj
+++ b/CSharpEgitimKampi301BusinessLayer/CSharpEgitimKampi301.BusinessLayer.csproj
@@ -43,5 +43,11 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CSharpEgitimKampi301DataAccessLayer\CSharpEgitimKampi301.DataAccessLayer.csproj">
+      <Project>{3aed25a4-b9a5-47e3-8829-302fe0c53e36}</Project>
+      <Name>CSharpEgitimKampi301.DataAccessLayer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
