--- a/CSharpEgitimKampi301.EFProject/App.config
+++ b/CSharpEgitimKampi301.EFProject/App.config
@@ -7,12 +7,17 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
+  <connectionStrings>
+    <add name="EgitimKampiEFTravelDbEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NUCBOX_M6;initial catalog=EgitimKampiEFTravelDb;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-	<connectionStrings>
-		<add name="KampContext" connectionString="Data Source=NUCBOX_M6; initial Catalog=EgitimKampi301Db;integrated security=true;" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
 </configuration>
