--- a/CSharpEgitimKampi301BusinessLayer/CSharpEgitimKampi301.BusinessLayer.csproj
+++ b/CSharpEgitimKampi301BusinessLayer/CSharpEgitimKampi301.BusinessLayer.csproj
@@ -41,9 +41,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\ICategoryService.cs" />
+    <Compile Include="Abstract\ICustomerService.cs" />
+    <Compile Include="Abstract\IGenericService.cs" />
+    <Compile Include="Abstract\IOrderService.cs" />
+    <Compile Include="Abstract\IProductService.cs" />
+    <Compile Include="Concrete\CategoryManager.cs" />
+    <Compile Include="Concrete\CustomerManager.cs" />
+    <Compile Include="Concrete\OrderManager.cs" />
+    <Compile Include="Concrete\ProductManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CSharpEgitimKampi301.EntityLayer\CSharpEgitimKampi301.EntityLayer.csproj">
+      <Project>{504CA6B7-4A5C-4241-BA3F-2BF1669C6559}</Project>
+      <Name>CSharpEgitimKampi301.EntityLayer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CSharpEgitimKampi301DataAccessLayer\CSharpEgitimKampi301.DataAccessLayer.csproj">
       <Project>{3aed25a4-b9a5-47e3-8829-302fe0c53e36}</Project>
       <Name>CSharpEgitimKampi301.DataAccessLayer</Name>
